fixing spacing

--- a/blocks/dual-carousel/dual-carousel.css
+++ b/blocks/dual-carousel/dual-carousel.css
@@ -5,7 +5,8 @@
 }
 
 .dhls-mobile-spacing {
-  padding: 20px
+  padding-left: 20px;
+  padding-right: 20px
 }
 
 .dual-carousel-wrapper :is(.pointer-events-none) {
@@ -154,10 +155,6 @@
 
 .dual-carousel-wrapper :is(.p-\[12px\]) {
   padding: 12px
-}
-
-.dual-carousel-wrapper :is(.p-\[20px\]) {
-  padding: 20px
 }
 
 .dual-carousel-wrapper :is(.text-base) {
